--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,27 @@ h2{
 body{
   color: #4c4c4c;
   background-color: #f5f5f5;
+  font-size: 18px;
 }
 a:hover, a:active, a:focus { 
   outline: 0; 
   color: #fff; 
   text-decoration: none; 
+}
+.button{
+  border-radius: 0px;
+  color: #4c4c4c;
+  background: none;
+  border: 1px solid #4c4c4c;
+  font-size: 16px;
+  padding: 9px 30px;
+  font-weight: normal;
+  display: inline-block;
+  text-decoration: none;
+  font-family: "HelveticaLTStd-Roman", Arial, sans-serif;
+  min-width: 120px;
+  text-transform: uppercase;
+  display: inline-block;
 }
 
 #main-title {
@@ -25,10 +41,21 @@ a:hover, a:active, a:focus {
   font-size: 48px;
   font-family: "Vijaya", Arial, sans-serif;
   line-height: 1em;
-}
 
+}
+.panel {
+  margin-top: 50px;
+  background-color: #f5f5f5;
+  height:500px;
+  padding-left: 3em;
+  box-shadow: 0 0 0  rgba(0,0,0,0);
+}
+.panel-picture{
+  background-color: #9ddbda;
+  padding:3em;
+}
 .portfolio-panel { 
-  background-image: url("../img/arnold-china.jpg");
+  background-image: url("../img/arnold-china-purple.jpg");
   height:550px;
   -webkit-background-size: cover!important; 
   -moz-background-size: cover!important; 
