--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,12 @@ a:hover, a:active, a:focus {
   line-height: 1em;
   text-shadow: 1px 1px rgba(0,0,0,0.5);
 }
+.profile-pic{
+  background-image: url("../img/profile-picture.jpg");
+  background-repeat: no-repeat;
+  background-size:  500px;
+  height:500px;
+}
 .panel {  
   background-color: #f5f5f5;
   height:500px; 
