--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,28 @@
 
-h2{
-  color: #92278f;
-  margin-top: 1em;
-}
-
 body{
   color: #4c4c4c;
   background-color: #f5f5f5;
   font-size: 18px;
 }
+h1 {
+  font-family: "BebasNeueRegular", Arial, sans-serif;
+  color: #92278f;
+  margin-top: 1em;
+}
+h2{
+  font-family: "BebasNeueRegular", Arial, sans-serif;
+  color: #92278f;
+  margin-top: 1em;
+}
+
 a:hover, a:active, a:focus { 
   outline: 0; 
   color: #fff; 
   text-decoration: none; 
+}
+
+.container-fluid{
+
 }
 .button{
   border-radius: 0px;
@@ -39,6 +49,7 @@ a:hover, a:active, a:focus {
   margin-top: 200px;
   margin-bottom: 10px;
   text-shadow: 1px 1px rgba(0,0,0,0.5);
+  color:#fff;
 
 }
 #sub-title{
@@ -74,7 +85,6 @@ a:hover, a:active, a:focus {
   color: #fff; 
   font-family: "Vijaya", Arial, sans-serif; 
   font-size: 49px; line-height: 1em;
-
   }
   .center{
     text-align: center;
