--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,12 @@ a:hover, a:active, a:focus {
   background-size:  500px;
   height:500px;
 }
+.about-me{
+  background-color: #fff;
+  height:500px; 
+  padding: 10%;
+  box-shadow: 0 0 0  rgba(0,0,0,0);
+}
 .panel {  
   background-color: #f5f5f5;
   height:500px; 
