--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,6 @@ a:hover, a:active, a:focus {
   text-decoration: none; 
 }
 
-.container-fluid{
-
-}
 .button{
   border-radius: 0px;
   color: #4c4c4c;
@@ -64,12 +61,7 @@ a:hover, a:active, a:focus {
   background-size:  500px;
   height:500px;
 }
-.about-me{
-  background-color: #fff;
-  height:500px; 
-  padding: 10%;
-  box-shadow: 0 0 0  rgba(0,0,0,0);
-}
+
 .panel {  
   background-color: #f5f5f5;
   height:500px; 
@@ -92,7 +84,20 @@ a:hover, a:active, a:focus {
   font-family: "Vijaya", Arial, sans-serif; 
   font-size: 49px; line-height: 1em;
   }
-  .center{
+
+.contact-me{
+  background-color: #fff;
+  padding:10%;
+}
+
+.form-control{
+  border-radius:0px;
+  color: #4c4c4c;
+  background: none;
+  border: 1px solid #4c4c4c;
+}
+
+.center{
     text-align: center;
   }
 .icon{
@@ -101,6 +106,16 @@ a:hover, a:active, a:focus {
   margin-right: .5em;
 }
 #icon{
+}
+
+.footer{
+  background-color: #b67bb4;
+  padding: 10%;
+  box-shadow: 0 0 0  rgba(0,0,0,0);
+  color:#fff;
+}
+#footer{
+  color:#fff;
 }
 /* fonts panel */
 @font-face {
