--- a/css/styles.css
+++ b/css/styles.css
@@ -66,12 +66,18 @@ a:hover, a:active, a:focus {
   background-color: #f5f5f5;
   height:500px; 
   padding: 10%;
+  margin-bottom: 0;
   box-shadow: 0 0 0  rgba(0,0,0,0);
 }
 /* blue #9ddbda; */
 .panel-picture{
   background-color: #9ddbda;
-  padding:3em;
+  padding:2em;
+  height: 500px;
+}
+
+.panel-icon{
+  height:100%;
 }
 .portfolio-panel { 
   background-image: url("../img/arnold-china-purple.jpg");
